# students

./: .coveragerc  .dockerignore  README.md  docker-compose.yaml  example.env  pyproject.toml  tox.ini
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: article.py  authentication.py  comment.py  profile.py  tag.py  user.py
app/core/: config.py  errors.py  jwt.py  utils.py
app/crud/: article.py  comment.py  profile.py  shortcuts.py  tag.py  user.py
app/db/mongodb/: db_utils.py
app/models/: article.py  dbmodel.py  profile.py  rwmodel.py  tag.py  user.py
data/mongodb/initdb.d/: create-app-user.sh
docker/: Dockerfile
tests/: conftest.py
tests/api/: conftest.py
tests/api/api_v1/: test_create_user.py
tests/api/api_v1/tag/: test_get_tags.py
tests/api/api_v1/test_create_comments/: test_create_comments.py
tests/api/api_v1/test_create_user/: test_create_user.py
tests/api/api_v1/test_crete_new_article/: test_create_new_article.py
tests/api/api_v1/test_delete_article/: test_delete_article.py
tests/api/api_v1/test_delete_comments/: test_delete_comment.py
tests/api/api_v1/test_delete_favorite_article/: test_delete_favorite_article.py
tests/api/api_v1/test_favorite_article/: test_favorite_article.py
tests/api/api_v1/test_get_article/: test_get_article.py
tests/api/api_v1/test_get_articles/: test_get_articles.py
tests/api/api_v1/test_get_comments/: test_get_comments.py
tests/api/api_v1/test_get_user_feed/: test_get_user_feed.py
tests/crud/: conftest.py
tests/crud/article/: test_article.py
(+36 files in other folders)
